tests/snapshots/cli_parse__parse_secret_get.snap
---
source: tests/cli_parse.rs
expression: "OptView::from(&opt)"
---
{
  "command": {
    "command": "secret",
    "subcommand": "get",
    "secret_id": "11111111-1111-1111-1111-111111111111",
    "secret_value_type": "json"
  },
  "api_key_id": "00000000-0000-0000-0000-000000000000",
  "api_secret_key_hex": "0000000000000000000000000000000000000000000000000000000000000000",
  "server_url": "https://psono.pw/server"
}
