tests/snapshots/cli_parse__parse_secret_get_fails_without_globals.snap
---
source: tests/cli_parse.rs
expression: error
---
error: the following required arguments were not provided:
  --api-key-id <API_KEY_ID>
  --api-secret-key-hex <API_SECRET_KEY_HEX>
  --server-url <SERVER_URL>

Usage: psonoci --api-key-id <API_KEY_ID> --api-secret-key-hex <API_SECRET_KEY_HEX> --server-url <SERVER_URL> <COMMAND>

For more information, try '--help'.
